fix: overflow issues

--- a/src/components/Map/index.css
+++ b/src/components/Map/index.css
@@ -2,12 +2,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
 }
 
 .flexItemMap {
   margin-right: 800px;
   margin-bottom: calc(50vh - 56px);
   color: rgb(173, 160, 160);
+}
+
+.wrapMap {
+  overflow: hidden;
+  position: absolute;
+  width: 50%;
+  height: 50%;
 }
 
 @media only screen and (min-width: 300px) and (max-width: 699px) {
@@ -42,8 +50,6 @@
   .flexContainerMap {
     flex-direction: column;
     justify-content: flex-start;
-
-    overflow-y: auto;
   }
 
   .flexItemMap {
